Added radial lines to wheel menu

--- a/ClassCalc/stylesheet.css
+++ b/ClassCalc/stylesheet.css
@@ -15,6 +15,7 @@ button{
 
 a{
 	text-decoration: none;
+	color: black;
 }
 
 a:hover, img:hover, button:hover, i:hover{
@@ -44,6 +45,7 @@ td{
     right:0;
     bottom:0;
     display:none;
+    z-index: 8;
 }
 
 .btn-round{
@@ -57,7 +59,7 @@ td{
     background-color: #fff;
     overflow-x: hidden;
     transition: 0.5s;
-    z-index: 7;
+    z-index: 9;
 }
 
 .sidenav a {
@@ -304,10 +306,6 @@ td{
 	text-align: center;
 }
 
-/*#menu *{
-	border: .5px solid blue;
-}*/
-
 .wheel-button{
 	font-size: 25px;
 	padding: 40px 25px;
@@ -317,6 +315,7 @@ td{
 	position: relative;
 	border-radius: 50%;
 	vertical-align: middle;
+	z-index: 7;
 }
 
 .wheel-button:active{
@@ -329,11 +328,6 @@ td{
 
 .wheel-button:focus{
 	color: #22967F;
-}
-
-.wheel li{
-	width: 200px;
-	height: 200px;
 }
 
 .wheel li a, .wheel li a:visited{
@@ -365,6 +359,110 @@ td{
 .menu-btn:active{
 	background-color: #BBBBBB;
 	color: #22967F;
+}
+
+.col-5{
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    overflow: hidden;
+    margin-top: -25px;
+    margin-left: -35px;
+    margin-right: -35px;
+    position: relative;
+    border-radius: 50%;
+}
+.col-5 ul{
+    position: relative;
+    padding: 0;
+    margin: 0;
+}
+
+.col-5 li{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    transform-origin: 100% 100%;
+    background: linear-gradient(-45deg, #22967F, #2ABC9F 10%, white);
+    z-index: 7;
+}
+
+.col-5 .east:nth-of-type(1){
+    transform: rotate(74deg) skew(60deg);
+}
+.col-5 .east:nth-of-type(2){
+    transform: rotate(111deg) skew(60deg);
+}
+.col-5 .east:nth-of-type(3){
+    transform: rotate(147deg) skew(60deg);
+}
+.col-5 .east:nth-of-type(4){
+    transform: rotate(183deg) skew(60deg);
+}
+.col-5 .east:nth-of-type(5){
+    transform: rotate(219deg) skew(60deg);
+}
+.col-5 .east:nth-of-type(6){
+    transform: rotate(255deg) skew(60deg);
+}
+.col-5 .east:nth-of-type(7){
+    transform: rotate(291deg) skew(60deg);
+}
+
+.col-5 .west:nth-of-type(1){
+    transform: rotate(254deg) skew(60deg);
+}
+.col-5 .west:nth-of-type(2){
+    transform: rotate(290deg) skew(60deg);
+}
+.col-5 .west:nth-of-type(3){
+    transform: rotate(326deg) skew(60deg);
+}
+.col-5 .west:nth-of-type(4){
+    transform: rotate(2deg) skew(60deg);
+}
+.col-5 .west:nth-of-type(5){
+    transform: rotate(38deg) skew(60deg);
+}
+.col-5 .west:nth-of-type(6){
+    transform: rotate(74deg) skew(60deg);
+}
+
+.col-5 .center:nth-of-type(1){
+    transform: rotate(165deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(2){
+    transform: rotate(201deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(3){
+    transform: rotate(237deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(4){
+    transform: rotate(273deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(5){
+    transform: rotate(309deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(6){
+    transform: rotate(345deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(7){
+    transform: rotate(21deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(8){
+    transform: rotate(57deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(9){
+    transform: rotate(93deg) skew(60deg);
+}
+.col-5 .center:nth-of-type(10){
+    transform: rotate(129deg) skew(60deg);
+}
+
+.radial{
+	display: none;
 }
 
 .menu-btn-center{
